# GraphQL

./: .env  .gitignore  main.py  objects.py  old.py  pyproject.toml
db/: data.py  database.py  models.py
db/employer/: models.py
db/job/: models.py
db/user/: models.py
gql/: mutations.py  queries.py  types.py
gql/employer/: mutations.py
gql/job/: mutations.py
gql/user/: mutations.py  utils.py
